# GTK-calculator

./: CMakeLists.txt  README.md
src/: logic.c  logic.h  main.c  ui.c  ui.h
